Practica03/src/sintactico/y.output
   0  $accept : programa $end

   1  programa : lista_definiciones lista_sentencias

   2  lista_definiciones : lista_variables lista_funciones

   3  expresion : CTE_ENTERA
   4            | CTE_REAL
   5            | CTE_CARACTER
   6            | ID
   7            | '(' expresion ')'
   8            | expresion '.' expresion
   9            | expresion '[' expresion ']'
  10            | '-' expresion
  11            | '!' expresion
  12            | expresion '*' expresion
  13            | expresion '/' expresion
  14            | expresion '%' expresion
  15            | expresion '+' expresion
  16            | expresion '-' expresion
  17            | expresion '>' expresion
  18            | expresion MAYOR_IGUAL expresion
  19            | expresion '<' expresion
  20            | expresion MENOR_IGUAL expresion
  21            | expresion DISTINTO expresion
  22            | expresion IGUAL_IGUAL expresion
  23            | expresion AND expresion
  24            | expresion OR expresion
  25            | tipo '(' expresion ')'
  26            | ID '(' lista_expresiones ')'

  27  lista_sentencias : sentencia_if lista_sentencias
  28                   | sentencia_else lista_sentencias
  29                   | sentencia_while lista_sentencias
  30                   | sentencia_write lista_sentencias
  31                   | sentencia_read lista_sentencias
  32                   | sentencia_asignacion lista_sentencias
  33                   | sentencia_return
  34                   | invocacion_funcion lista_sentencias
  35                   |

  36  sentencia_asignacion : expresion '=' expresion ';'

  37  sentencia_if : IF expresion '{' lista_sentencias '}'

  38  sentencia_else : ELSE '{' lista_sentencias '}'

  39  sentencia_while : WHILE expresion '{' lista_sentencias '}'

  40  lista_expresiones : expresiones
  41                    |

  42  expresiones : expresion
  43              | expresiones ',' expresion

  44  sentencia_write : WRITE '(' lista_expresiones ')' ';'

  45  sentencia_read : READ '(' lista_expresiones ')' ';'

  46  sentencia_return : RETURN expresion ';'

  47  invocacion_funcion : ID '(' lista_expresiones ')' ';'

  48  lista_variables : lista_variables definicion_variable
  49                  |

  50  definicion_variable : VAR identificadores tipo ';'

  51  identificadores : ID
  52                  | identificadores ',' ID

  53  variable_struct : identificadores tipo ';'

  54  variables_struct : variable_struct
  55                   | variable_struct variables_struct

  56  tipo : INT
  57       | FLOAT32
  58       | CHAR
  59       | '[' CTE_ENTERA ']' tipo
  60       | STRUCT '{' variables_struct '}'

  61  lista_funciones : lista_funciones definicion_funcion
  62                  |

  63  definicion_funcion : FUNC ID '(' lista_parametros ')' retorno '{' lista_variables lista_sentencias '}'

  64  retorno : tipo
  65          | VOID
  66          |

  67  lista_parametros : parametro
  68                   |

  69  parametro : ID tipo
  70            | parametro ',' ID tipo

state 0
	$accept : . programa $end  (0)
	lista_variables : .  (49)

	.  reduce 49

	programa  goto 1
	lista_definiciones  goto 2
	lista_variables  goto 3


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : lista_definiciones . lista_sentencias  (1)
	lista_sentencias : .  (35)

	CTE_ENTERA  shift 4
	IF  shift 5
	CTE_CARACTER  shift 6
	ID  shift 7
	ELSE  shift 8
	WRITE  shift 9
	CTE_REAL  shift 10
	STRUCT  shift 11
	WHILE  shift 12
	FLOAT32  shift 13
	INT  shift 14
	RETURN  shift 15
	CHAR  shift 16
	READ  shift 17
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	$end  reduce 35

	lista_sentencias  goto 22
	expresion  goto 23
	tipo  goto 24
	sentencia_if  goto 25
	sentencia_else  goto 26
	sentencia_while  goto 27
	sentencia_write  goto 28
	sentencia_read  goto 29
	sentencia_asignacion  goto 30
	sentencia_return  goto 31
	invocacion_funcion  goto 32


state 3
	lista_definiciones : lista_variables . lista_funciones  (2)
	lista_variables : lista_variables . definicion_variable  (48)
	lista_funciones : .  (62)

	VAR  shift 33
	$end  reduce 62
	CTE_ENTERA  reduce 62
	IF  reduce 62
	CTE_CARACTER  reduce 62
	ID  reduce 62
	ELSE  reduce 62
	WRITE  reduce 62
	CTE_REAL  reduce 62
	STRUCT  reduce 62
	WHILE  reduce 62
	FUNC  reduce 62
	FLOAT32  reduce 62
	INT  reduce 62
	RETURN  reduce 62
	CHAR  reduce 62
	READ  reduce 62
	'-'  reduce 62
	'!'  reduce 62
	'['  reduce 62
	'('  reduce 62

	lista_funciones  goto 34
	definicion_variable  goto 35


state 4
	expresion : CTE_ENTERA .  (3)

	.  reduce 3


state 5
	sentencia_if : IF . expresion '{' lista_sentencias '}'  (37)

	CTE_ENTERA  shift 4
	CTE_CARACTER  shift 6
	ID  shift 36
	CTE_REAL  shift 10
	STRUCT  shift 11
	FLOAT32  shift 13
	INT  shift 14
	CHAR  shift 16
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	.  error

	expresion  goto 37
	tipo  goto 24


state 6
	expresion : CTE_CARACTER .  (5)

	.  reduce 5


state 7
	expresion : ID .  (6)
	expresion : ID . '(' lista_expresiones ')'  (26)
	invocacion_funcion : ID . '(' lista_expresiones ')' ';'  (47)

	'('  shift 38
	DISTINTO  reduce 6
	MENOR_IGUAL  reduce 6
	MAYOR_IGUAL  reduce 6
	IGUAL_IGUAL  reduce 6
	AND  reduce 6
	OR  reduce 6
	'='  reduce 6
	'<'  reduce 6
	'>'  reduce 6
	'-'  reduce 6
	'+'  reduce 6
	'%'  reduce 6
	'/'  reduce 6
	'*'  reduce 6
	'['  reduce 6
	'.'  reduce 6


state 8
	sentencia_else : ELSE . '{' lista_sentencias '}'  (38)

	'{'  shift 39
	.  error


state 9
	sentencia_write : WRITE . '(' lista_expresiones ')' ';'  (44)

	'('  shift 40
	.  error


state 10
	expresion : CTE_REAL .  (4)

	.  reduce 4


state 11
	tipo : STRUCT . '{' variables_struct '}'  (60)

	'{'  shift 41
	.  error


state 12
	sentencia_while : WHILE . expresion '{' lista_sentencias '}'  (39)

	CTE_ENTERA  shift 4
	CTE_CARACTER  shift 6
	ID  shift 36
	CTE_REAL  shift 10
	STRUCT  shift 11
	FLOAT32  shift 13
	INT  shift 14
	CHAR  shift 16
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	.  error

	expresion  goto 42
	tipo  goto 24


state 13
	tipo : FLOAT32 .  (57)

	.  reduce 57


state 14
	tipo : INT .  (56)

	.  reduce 56


state 15
	sentencia_return : RETURN . expresion ';'  (46)

	CTE_ENTERA  shift 4
	CTE_CARACTER  shift 6
	ID  shift 36
	CTE_REAL  shift 10
	STRUCT  shift 11
	FLOAT32  shift 13
	INT  shift 14
	CHAR  shift 16
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	.  error

	expresion  goto 43
	tipo  goto 24


state 16
	tipo : CHAR .  (58)

	.  reduce 58


state 17
	sentencia_read : READ . '(' lista_expresiones ')' ';'  (45)

	'('  shift 44
	.  error


state 18
	expresion : '-' . expresion  (10)

	CTE_ENTERA  shift 4
	CTE_CARACTER  shift 6
	ID  shift 36
	CTE_REAL  shift 10
	STRUCT  shift 11
	FLOAT32  shift 13
	INT  shift 14
	CHAR  shift 16
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	.  error

	expresion  goto 45
	tipo  goto 24


state 19
	expresion : '!' . expresion  (11)

	CTE_ENTERA  shift 4
	CTE_CARACTER  shift 6
	ID  shift 36
	CTE_REAL  shift 10
	STRUCT  shift 11
	FLOAT32  shift 13
	INT  shift 14
	CHAR  shift 16
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	.  error

	expresion  goto 46
	tipo  goto 24


state 20
	tipo : '[' . CTE_ENTERA ']' tipo  (59)

	CTE_ENTERA  shift 47
	.  error


state 21
	expresion : '(' . expresion ')'  (7)

	CTE_ENTERA  shift 4
	CTE_CARACTER  shift 6
	ID  shift 36
	CTE_REAL  shift 10
	STRUCT  shift 11
	FLOAT32  shift 13
	INT  shift 14
	CHAR  shift 16
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	.  error

	expresion  goto 48
	tipo  goto 24


state 22
	programa : lista_definiciones lista_sentencias .  (1)

	.  reduce 1


state 23
	expresion : expresion . '.' expresion  (8)
	expresion : expresion . '[' expresion ']'  (9)
	expresion : expresion . '*' expresion  (12)
	expresion : expresion . '/' expresion  (13)
	expresion : expresion . '%' expresion  (14)
	expresion : expresion . '+' expresion  (15)
	expresion : expresion . '-' expresion  (16)
	expresion : expresion . '>' expresion  (17)
	expresion : expresion . MAYOR_IGUAL expresion  (18)
	expresion : expresion . '<' expresion  (19)
	expresion : expresion . MENOR_IGUAL expresion  (20)
	expresion : expresion . DISTINTO expresion  (21)
	expresion : expresion . IGUAL_IGUAL expresion  (22)
	expresion : expresion . AND expresion  (23)
	expresion : expresion . OR expresion  (24)
	sentencia_asignacion : expresion . '=' expresion ';'  (36)

	DISTINTO  shift 49
	MENOR_IGUAL  shift 50
	MAYOR_IGUAL  shift 51
	IGUAL_IGUAL  shift 52
	AND  shift 53
	OR  shift 54
	'='  shift 55
	'<'  shift 56
	'>'  shift 57
	'-'  shift 58
	'+'  shift 59
	'%'  shift 60
	'/'  shift 61
	'*'  shift 62
	'['  shift 63
	'.'  shift 64
	.  error


state 24
	expresion : tipo . '(' expresion ')'  (25)

	'('  shift 65
	.  error


state 25
	lista_sentencias : sentencia_if . lista_sentencias  (27)
	lista_sentencias : .  (35)

	CTE_ENTERA  shift 4
	IF  shift 5
	CTE_CARACTER  shift 6
	ID  shift 7
	ELSE  shift 8
	WRITE  shift 9
	CTE_REAL  shift 10
	STRUCT  shift 11
	WHILE  shift 12
	FLOAT32  shift 13
	INT  shift 14
	RETURN  shift 15
	CHAR  shift 16
	READ  shift 17
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	$end  reduce 35
	'}'  reduce 35

	lista_sentencias  goto 66
	expresion  goto 23
	tipo  goto 24
	sentencia_if  goto 25
	sentencia_else  goto 26
	sentencia_while  goto 27
	sentencia_write  goto 28
	sentencia_read  goto 29
	sentencia_asignacion  goto 30
	sentencia_return  goto 31
	invocacion_funcion  goto 32


state 26
	lista_sentencias : sentencia_else . lista_sentencias  (28)
	lista_sentencias : .  (35)

	CTE_ENTERA  shift 4
	IF  shift 5
	CTE_CARACTER  shift 6
	ID  shift 7
	ELSE  shift 8
	WRITE  shift 9
	CTE_REAL  shift 10
	STRUCT  shift 11
	WHILE  shift 12
	FLOAT32  shift 13
	INT  shift 14
	RETURN  shift 15
	CHAR  shift 16
	READ  shift 17
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	$end  reduce 35
	'}'  reduce 35

	lista_sentencias  goto 67
	expresion  goto 23
	tipo  goto 24
	sentencia_if  goto 25
	sentencia_else  goto 26
	sentencia_while  goto 27
	sentencia_write  goto 28
	sentencia_read  goto 29
	sentencia_asignacion  goto 30
	sentencia_return  goto 31
	invocacion_funcion  goto 32


state 27
	lista_sentencias : sentencia_while . lista_sentencias  (29)
	lista_sentencias : .  (35)

	CTE_ENTERA  shift 4
	IF  shift 5
	CTE_CARACTER  shift 6
	ID  shift 7
	ELSE  shift 8
	WRITE  shift 9
	CTE_REAL  shift 10
	STRUCT  shift 11
	WHILE  shift 12
	FLOAT32  shift 13
	INT  shift 14
	RETURN  shift 15
	CHAR  shift 16
	READ  shift 17
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	$end  reduce 35
	'}'  reduce 35

	lista_sentencias  goto 68
	expresion  goto 23
	tipo  goto 24
	sentencia_if  goto 25
	sentencia_else  goto 26
	sentencia_while  goto 27
	sentencia_write  goto 28
	sentencia_read  goto 29
	sentencia_asignacion  goto 30
	sentencia_return  goto 31
	invocacion_funcion  goto 32


state 28
	lista_sentencias : sentencia_write . lista_sentencias  (30)
	lista_sentencias : .  (35)

	CTE_ENTERA  shift 4
	IF  shift 5
	CTE_CARACTER  shift 6
	ID  shift 7
	ELSE  shift 8
	WRITE  shift 9
	CTE_REAL  shift 10
	STRUCT  shift 11
	WHILE  shift 12
	FLOAT32  shift 13
	INT  shift 14
	RETURN  shift 15
	CHAR  shift 16
	READ  shift 17
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	$end  reduce 35
	'}'  reduce 35

	lista_sentencias  goto 69
	expresion  goto 23
	tipo  goto 24
	sentencia_if  goto 25
	sentencia_else  goto 26
	sentencia_while  goto 27
	sentencia_write  goto 28
	sentencia_read  goto 29
	sentencia_asignacion  goto 30
	sentencia_return  goto 31
	invocacion_funcion  goto 32


state 29
	lista_sentencias : sentencia_read . lista_sentencias  (31)
	lista_sentencias : .  (35)

	CTE_ENTERA  shift 4
	IF  shift 5
	CTE_CARACTER  shift 6
	ID  shift 7
	ELSE  shift 8
	WRITE  shift 9
	CTE_REAL  shift 10
	STRUCT  shift 11
	WHILE  shift 12
	FLOAT32  shift 13
	INT  shift 14
	RETURN  shift 15
	CHAR  shift 16
	READ  shift 17
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	$end  reduce 35
	'}'  reduce 35

	lista_sentencias  goto 70
	expresion  goto 23
	tipo  goto 24
	sentencia_if  goto 25
	sentencia_else  goto 26
	sentencia_while  goto 27
	sentencia_write  goto 28
	sentencia_read  goto 29
	sentencia_asignacion  goto 30
	sentencia_return  goto 31
	invocacion_funcion  goto 32


state 30
	lista_sentencias : sentencia_asignacion . lista_sentencias  (32)
	lista_sentencias : .  (35)

	CTE_ENTERA  shift 4
	IF  shift 5
	CTE_CARACTER  shift 6
	ID  shift 7
	ELSE  shift 8
	WRITE  shift 9
	CTE_REAL  shift 10
	STRUCT  shift 11
	WHILE  shift 12
	FLOAT32  shift 13
	INT  shift 14
	RETURN  shift 15
	CHAR  shift 16
	READ  shift 17
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	$end  reduce 35
	'}'  reduce 35

	lista_sentencias  goto 71
	expresion  goto 23
	tipo  goto 24
	sentencia_if  goto 25
	sentencia_else  goto 26
	sentencia_while  goto 27
	sentencia_write  goto 28
	sentencia_read  goto 29
	sentencia_asignacion  goto 30
	sentencia_return  goto 31
	invocacion_funcion  goto 32


state 31
	lista_sentencias : sentencia_return .  (33)

	.  reduce 33


state 32
	lista_sentencias : invocacion_funcion . lista_sentencias  (34)
	lista_sentencias : .  (35)

	CTE_ENTERA  shift 4
	IF  shift 5
	CTE_CARACTER  shift 6
	ID  shift 7
	ELSE  shift 8
	WRITE  shift 9
	CTE_REAL  shift 10
	STRUCT  shift 11
	WHILE  shift 12
	FLOAT32  shift 13
	INT  shift 14
	RETURN  shift 15
	CHAR  shift 16
	READ  shift 17
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	$end  reduce 35
	'}'  reduce 35

	lista_sentencias  goto 72
	expresion  goto 23
	tipo  goto 24
	sentencia_if  goto 25
	sentencia_else  goto 26
	sentencia_while  goto 27
	sentencia_write  goto 28
	sentencia_read  goto 29
	sentencia_asignacion  goto 30
	sentencia_return  goto 31
	invocacion_funcion  goto 32


state 33
	definicion_variable : VAR . identificadores tipo ';'  (50)

	ID  shift 73
	.  error

	identificadores  goto 74


state 34
	lista_definiciones : lista_variables lista_funciones .  (2)
	lista_funciones : lista_funciones . definicion_funcion  (61)

	FUNC  shift 75
	$end  reduce 2
	CTE_ENTERA  reduce 2
	IF  reduce 2
	CTE_CARACTER  reduce 2
	ID  reduce 2
	ELSE  reduce 2
	WRITE  reduce 2
	CTE_REAL  reduce 2
	STRUCT  reduce 2
	WHILE  reduce 2
	FLOAT32  reduce 2
	INT  reduce 2
	RETURN  reduce 2
	CHAR  reduce 2
	READ  reduce 2
	'-'  reduce 2
	'!'  reduce 2
	'['  reduce 2
	'('  reduce 2

	definicion_funcion  goto 76


state 35
	lista_variables : lista_variables definicion_variable .  (48)

	.  reduce 48


state 36
	expresion : ID .  (6)
	expresion : ID . '(' lista_expresiones ')'  (26)

	'('  shift 77
	DISTINTO  reduce 6
	MENOR_IGUAL  reduce 6
	MAYOR_IGUAL  reduce 6
	IGUAL_IGUAL  reduce 6
	AND  reduce 6
	OR  reduce 6
	'='  reduce 6
	'<'  reduce 6
	'>'  reduce 6
	'-'  reduce 6
	'+'  reduce 6
	'%'  reduce 6
	'/'  reduce 6
	'*'  reduce 6
	'['  reduce 6
	']'  reduce 6
	'.'  reduce 6
	')'  reduce 6
	';'  reduce 6
	'{'  reduce 6
	','  reduce 6


state 37
	expresion : expresion . '.' expresion  (8)
	expresion : expresion . '[' expresion ']'  (9)
	expresion : expresion . '*' expresion  (12)
	expresion : expresion . '/' expresion  (13)
	expresion : expresion . '%' expresion  (14)
	expresion : expresion . '+' expresion  (15)
	expresion : expresion . '-' expresion  (16)
	expresion : expresion . '>' expresion  (17)
	expresion : expresion . MAYOR_IGUAL expresion  (18)
	expresion : expresion . '<' expresion  (19)
	expresion : expresion . MENOR_IGUAL expresion  (20)
	expresion : expresion . DISTINTO expresion  (21)
	expresion : expresion . IGUAL_IGUAL expresion  (22)
	expresion : expresion . AND expresion  (23)
	expresion : expresion . OR expresion  (24)
	sentencia_if : IF expresion . '{' lista_sentencias '}'  (37)

	DISTINTO  shift 49
	MENOR_IGUAL  shift 50
	MAYOR_IGUAL  shift 51
	IGUAL_IGUAL  shift 52
	AND  shift 53
	OR  shift 54
	'<'  shift 56
	'>'  shift 57
	'-'  shift 58
	'+'  shift 59
	'%'  shift 60
	'/'  shift 61
	'*'  shift 62
	'['  shift 63
	'.'  shift 64
	'{'  shift 78
	.  error


state 38
	expresion : ID '(' . lista_expresiones ')'  (26)
	invocacion_funcion : ID '(' . lista_expresiones ')' ';'  (47)
	lista_expresiones : .  (41)

	CTE_ENTERA  shift 4
	CTE_CARACTER  shift 6
	ID  shift 36
	CTE_REAL  shift 10
	STRUCT  shift 11
	FLOAT32  shift 13
	INT  shift 14
	CHAR  shift 16
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	')'  reduce 41

	expresion  goto 79
	tipo  goto 24
	lista_expresiones  goto 80
	expresiones  goto 81


state 39
	sentencia_else : ELSE '{' . lista_sentencias '}'  (38)
	lista_sentencias : .  (35)

	CTE_ENTERA  shift 4
	IF  shift 5
	CTE_CARACTER  shift 6
	ID  shift 7
	ELSE  shift 8
	WRITE  shift 9
	CTE_REAL  shift 10
	STRUCT  shift 11
	WHILE  shift 12
	FLOAT32  shift 13
	INT  shift 14
	RETURN  shift 15
	CHAR  shift 16
	READ  shift 17
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	'}'  reduce 35

	lista_sentencias  goto 82
	expresion  goto 23
	tipo  goto 24
	sentencia_if  goto 25
	sentencia_else  goto 26
	sentencia_while  goto 27
	sentencia_write  goto 28
	sentencia_read  goto 29
	sentencia_asignacion  goto 30
	sentencia_return  goto 31
	invocacion_funcion  goto 32


state 40
	sentencia_write : WRITE '(' . lista_expresiones ')' ';'  (44)
	lista_expresiones : .  (41)

	CTE_ENTERA  shift 4
	CTE_CARACTER  shift 6
	ID  shift 36
	CTE_REAL  shift 10
	STRUCT  shift 11
	FLOAT32  shift 13
	INT  shift 14
	CHAR  shift 16
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	')'  reduce 41

	expresion  goto 79
	tipo  goto 24
	lista_expresiones  goto 83
	expresiones  goto 81


state 41
	tipo : STRUCT '{' . variables_struct '}'  (60)

	ID  shift 73
	.  error

	identificadores  goto 84
	variable_struct  goto 85
	variables_struct  goto 86


state 42
	expresion : expresion . '.' expresion  (8)
	expresion : expresion . '[' expresion ']'  (9)
	expresion : expresion . '*' expresion  (12)
	expresion : expresion . '/' expresion  (13)
	expresion : expresion . '%' expresion  (14)
	expresion : expresion . '+' expresion  (15)
	expresion : expresion . '-' expresion  (16)
	expresion : expresion . '>' expresion  (17)
	expresion : expresion . MAYOR_IGUAL expresion  (18)
	expresion : expresion . '<' expresion  (19)
	expresion : expresion . MENOR_IGUAL expresion  (20)
	expresion : expresion . DISTINTO expresion  (21)
	expresion : expresion . IGUAL_IGUAL expresion  (22)
	expresion : expresion . AND expresion  (23)
	expresion : expresion . OR expresion  (24)
	sentencia_while : WHILE expresion . '{' lista_sentencias '}'  (39)

	DISTINTO  shift 49
	MENOR_IGUAL  shift 50
	MAYOR_IGUAL  shift 51
	IGUAL_IGUAL  shift 52
	AND  shift 53
	OR  shift 54
	'<'  shift 56
	'>'  shift 57
	'-'  shift 58
	'+'  shift 59
	'%'  shift 60
	'/'  shift 61
	'*'  shift 62
	'['  shift 63
	'.'  shift 64
	'{'  shift 87
	.  error


state 43
	expresion : expresion . '.' expresion  (8)
	expresion : expresion . '[' expresion ']'  (9)
	expresion : expresion . '*' expresion  (12)
	expresion : expresion . '/' expresion  (13)
	expresion : expresion . '%' expresion  (14)
	expresion : expresion . '+' expresion  (15)
	expresion : expresion . '-' expresion  (16)
	expresion : expresion . '>' expresion  (17)
	expresion : expresion . MAYOR_IGUAL expresion  (18)
	expresion : expresion . '<' expresion  (19)
	expresion : expresion . MENOR_IGUAL expresion  (20)
	expresion : expresion . DISTINTO expresion  (21)
	expresion : expresion . IGUAL_IGUAL expresion  (22)
	expresion : expresion . AND expresion  (23)
	expresion : expresion . OR expresion  (24)
	sentencia_return : RETURN expresion . ';'  (46)

	DISTINTO  shift 49
	MENOR_IGUAL  shift 50
	MAYOR_IGUAL  shift 51
	IGUAL_IGUAL  shift 52
	AND  shift 53
	OR  shift 54
	'<'  shift 56
	'>'  shift 57
	'-'  shift 58
	'+'  shift 59
	'%'  shift 60
	'/'  shift 61
	'*'  shift 62
	'['  shift 63
	'.'  shift 64
	';'  shift 88
	.  error


state 44
	sentencia_read : READ '(' . lista_expresiones ')' ';'  (45)
	lista_expresiones : .  (41)

	CTE_ENTERA  shift 4
	CTE_CARACTER  shift 6
	ID  shift 36
	CTE_REAL  shift 10
	STRUCT  shift 11
	FLOAT32  shift 13
	INT  shift 14
	CHAR  shift 16
	'-'  shift 18
	'!'  shift 19
	'['  shift 20
	'('  shift 21
	')'  reduce 41

	expresion  goto 79
	tipo  goto 24
	lista_expresiones  goto 89
	expresiones  goto 81


state 45
	expresion : expresion . '.' expresion  (8)
	expresion : expresion . '[' expresion ']'  (9)
	expresion : '-' expresion .  (10)
	expresion : expresion . '*' expresion  (12)
	expresion : expresion . '/' expresion  (13)
	expresion : expresion . '%' expresion  (14)
	expresion : expresion . '+' expresion  (15)
	expresion : expresion . '-' expresion  (16)
	expresion : expresion . '>' expresion  (17)
	expresion : expresion . MAYOR_IGUAL expresion  (18)
	expresion : expresion . '<' expresion  (19)
	expresion : expresion . MENOR_IGUAL expresion  (20)
	expresion : expresion . DISTINTO expresion  (21)
	expresion : expresion . IGUAL_IGUAL expresion  (22)
	expresion : expresion . AND expresion  (23)
	expresion : expresion . OR expresion  (24)

	'['  shift 63
	'.'  shift 64
	DISTINTO  reduce 10
	MENOR_IGUAL  reduce 10
	MAYOR_IGUAL  reduce 10
	IGUAL_IGUAL  reduce 10
	AND  reduce 10
	OR  reduce 10
	'='  reduce 10
	'<'  reduce 10
	'>'  reduce 10
	'-'  reduce 10
	'+'  reduce 10
	'%'  reduce 10
	'/'  reduce 10
	'*'  reduce 10
	']'  reduce 10
	')'  reduce 10
	';'  reduce 10
	'{'  reduce 10
	','  reduce 10


state 46
	expresion : expresion . '.' expresion  (8)
	expresion : expresion . '[' expresion ']'  (9)
	expresion : '!' expresion .  (11)
	expresion : expresion . '*' expresion  (12)
	expresion : expresion . '/' expresion  (13)
	expresion : expresion . '%' expresion  (14)
	expresion : expresion . '+' expresion  (15)
	expresion : expresion . '-' expresion  (16)
	expresion : expresion . '>' expresion  (17)
	expresion : expresion . MAYOR_IGUAL expresion  (18)
	expresion : expresion . '<' expresion  (19)
	expresion : expresion . MENOR_IGUAL expresion  (20)
	expresion : expresion . DISTINTO expresion  (21)
	expresion : expresion . IGUAL_IGUAL expresion  (22)
	expresion : expresion . AND expresion  (23)
	expresion : expresion . OR expresion  (24)

	'['  shift 63
	'.'  shift 64
	DISTINTO  reduce 11
	MENOR_IGUAL  reduce 11
	MAYOR_IGUAL  reduce 11
	IGUAL_IGUAL  reduce 11
	AND  reduce 11
	OR  reduce 11
	'='  reduce 11
	'<'  reduce 11
	'>'  reduce 11
	'-'  reduce 11
	'+'  reduce 11
	'%'  reduce 11
	'/'  reduce 11
	'*'  reduce 11
	']'  reduce 11
	')'  reduce 11
	';'  reduce 11
	'{'  reduce 11
	','  reduce 11


state 47
	tipo : '[' CTE_ENTERA . ']' tipo  (59)

	']'  shift 90
	.  error


state 48
	expresion : '(' expresion . ')'  (7)
	expresion : expresion . '.' expresion  (8)
	expresion : expresion . '[' expresion ']'  (9)
	expresion : expresion . '*' expresion  (12)
	expresion : expresion . '/' expresion  (13)
	expresion : expresion . '%' expresion  (14)
	expresion : expresion . '+' expresion  (15)
	expresion : expresion . '-' expresion  (16)
	expresion : expresion . '>' expresion  (17)
	expresion : expresion . MAYOR_IGUAL expresion  (18)
